cart home alignment issue fix

--- a/src/app/quoting/cart/cart-home/cart-home.component.css
+++ b/src/app/quoting/cart/cart-home/cart-home.component.css
@@ -143,3 +143,6 @@ button{
   font-weight: 400 !important;
   font-size: 14px
 }
+.optional-packages-btn p{
+    font-size: 14px;
+}
